--- a/src/portal/lib/src/repository-gridview/repository-gridview.component.html
+++ b/src/portal/lib/src/repository-gridview/repository-gridview.component.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="card-block">
                     <div class="card-text">
-                        {{getRepoDescrition(item)}}
+                        {{item.description || ('REPOSITORY.NO_INFO' | translate)}}
                     </div>
                     <div class="form-group">
                         <label>{{'REPOSITORY.TAGS_COUNT' | translate}}</label>
