--- a/src/portal/lib/src/label/label-marker/label-marker.component.html
+++ b/src/portal/lib/src/label/label-marker/label-marker.component.html
@@ -5,18 +5,18 @@
     </div>
     <div class="label-items-container">
         <div class="dropdown-item" *ngFor='let label of sortedLabels'>
-            <span *ngIf="!isMarkOngoing(label)" class="mark-label-span">
+            <div *ngIf="!isMarkOngoing(label)" class="mark-label-div">
                 <clr-icon *ngIf="isMarked(label)" shape="check" ></clr-icon>
-            </span>
-            <span *ngIf="isMarkOngoing(label)" class="spinner spinner-sm">
+            </div>
+            <div *ngIf="isMarkOngoing(label)" class="spinner spinner-sm">
                     Loading...
-            </span>
-            <span (click)="markLabel(label)">
+            </div>
+            <div (click)="markLabel(label)" class="label-div">
                 <hbr-label-piece [label]="label" [labelWidth]="130"></hbr-label-piece>
-            </span>
-            <span class="unmark-label-span" (click)="unmarkLabel(label)">
+            </div>
+            <div class="unmark-label-div" (click)="unmarkLabel(label)">
                 <clr-icon *ngIf="isMarked(label)" shape="times-circle"></clr-icon>
-            </span>
+            </div>
         </div>
     </div>
 </div>
